# pico-wifi-boot

./: CMakeLists.txt  LICENSE  README.md  bootloader.c  flash.c  memmap_offset_flash.ld  ota_server.c  sniffer_crc32.c  wifi_manager.c
client-js/: client.js  package.json
example/: CMakeLists.txt  README.md
example/src/: main.c
include/pico_wifi_boot/: flash.h  ota_server.h  reboot.h  sniffer_crc32.h  wifi_manager.h
src/: bootloader.c  flash.c  ota_server.c  reboot.c  wifi_manager.c
upload_tool/: README.md  flash.py  package-lock.json  upload.js
